--- a/src/Churchee.Module.Site/Areas/Site/Pages/Media/Index.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Media/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/management/media"
+@inherits BasePage
 @using Churchee.Module.Site.Features.CDN.Queries
 @using Churchee.Module.Site.Features.Media.Commands
 @using Churchee.Module.Site.Features.Media.Queries
@@ -80,21 +81,9 @@
 
 
 @code {
-
-    [Inject]
-    private ILogger<Index> Logger { get; set; } = default!;
-
-    [Inject]
-    private IMediator Mediator { get; set; } = default!;
-
+    
     [Inject]
     private DialogService DialogService { get; set; } = default!;
-
-    [Inject]
-    private NavigationManager NavigationManager { get; set; } = default!;
-
-    [Inject]
-    private NotificationService NotificationService { get; set; } = default!;
 
     [Inject]
     private IJSRuntime JSRuntime { get; set; }
