--- a/src/Churchee.Module.Site/Areas/Site/Pages/PageTypes/Create.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/PageTypes/Create.razor
@@ -1,12 +1,9 @@
 ﻿@page "/management/pagetypes/create"
+@inherits BasePage
 @using Churchee.Module.Site.Areas.Site.Models
 @using Churchee.Module.Site.Features.PageTypes.Commands.CreatePageType
 @using Churchee.Module.UI.Components
-@using MediatR
 @using Radzen
-@inject IMediator Mediator
-@inject NotificationService _notificationService
-@inject NavigationManager NavigationManager
 
 <PageName Name="Create Page Type"></PageName>
 
