--- a/src/Churchee.Module.Site/Areas/Site/Pages/Templates/Edit.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Templates/Edit.razor
@@ -1,20 +1,16 @@
 ﻿@page "/management/templates/edit/{Id:guid}"
+@inherits BasePage
 @using Churchee.Module.Site.Areas.Site.Models
 @using Churchee.Module.Site.Features.Templates.Commands.UpdateTemplateContent
 @using Churchee.Module.Site.Features.Templates.Queries.GetTemplateById
 @using Churchee.Module.UI.Components
-@using MediatR
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.Extensions.Logging
 @using Radzen
-@inject ILogger<Index> Logger
-@inject IMediator Mediator
-@inject NotificationService _notificationService
 
 <PageName Name="Edit Template"></PageName>
 
 <PageTitle>@InputModel.Content.Split('/').Last().Replace(".cshtml", "")</PageTitle>
-
 
 <Form InputModel="@InputModel" OnSave=@(async () => await ValidSubmitForm()) />
 
@@ -39,6 +35,6 @@
     {
         var result = await Mediator.Send(new UpdateTemplateContentComand(InputModel.Id, InputModel.Content));
        
-        _notificationService.Notify(new NotificationMessage { Severity = NotificationSeverity.Success, Summary = "Saved Successfully" });
+        NotificationService.Notify(new NotificationMessage { Severity = NotificationSeverity.Success, Summary = "Saved Successfully" });
     }
 }
