--- a/src/Churchee.Module.Tenancy/Areas/Configuration/Churches/Create/Create.razor
+++ b/src/Churchee.Module.Tenancy/Areas/Configuration/Churches/Create/Create.razor
@@ -1,12 +1,10 @@
 ﻿@page "/management/configuration/churches/create"
+@inherits BasePage
 @using Churchee.Module.Tenancy.Features.Churches.Commands
 @using Churchee.Module.UI.Components
 @using Churchee.Module.UI.Models
 @using MediatR
 @using Radzen
-@inject IMediator Mediator
-@inject NotificationService _notificationService
-@inject NavigationManager NavigationManager
 
 <PageName Name="Create Page Type"></PageName>
 
