--- a/src/Churchee.Module.Tenancy/Areas/Configuration/Churches/Index/Index.razor
+++ b/src/Churchee.Module.Tenancy/Areas/Configuration/Churches/Index/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/management/configuration/churches"
+@inherits BasePage
 @using Churchee.Common.Abstractions.Auth
 @using Churchee.Module.Identity.Entities
 @using Churchee.Module.Identity.Managers
@@ -13,8 +14,6 @@
 @using Radzen.Blazor
 @using System.Net.Http.Json
 @using System.Security.Claims
-
-
 
 <PageName Name="Churches"></PageName>
 
@@ -65,22 +64,10 @@
     private ICurrentUser CurrentUser { get; set; } = default!;
 
     [Inject]
-    private IMediator Mediator { get; set; } = default!;
+    private IHttpContextAccessor HttpContextAccessor { get; set; } = default!;
 
     [Inject]
-    private NotificationService _notificationService { get; set; } = default!;
-
-    [Inject]
-    private NavigationManager _navigationManager { get; set; } = default!;
-
-    [Inject]
-    private IHttpClientFactory ClientFactory { get; set; } = default!;
-
-    [Inject]
-    private IHttpContextAccessor _httpContextAccessor { get; set; } = default!;
-
-    [Inject]
-    private ChurcheeUserManager _userManager { get; set; } = default!;
+    private ChurcheeUserManager UserManager { get; set; } = default!;
 
     private Guid _activeTenant { get; set; } = default!;
 
@@ -108,44 +95,44 @@
     private async Task OnClick(Guid newId)
     {
 
-        var id = _httpContextAccessor.HttpContext?.User.FindFirstValue(ClaimTypes.NameIdentifier);
+        var id = HttpContextAccessor.HttpContext?.User.FindFirstValue(ClaimTypes.NameIdentifier);
 
         if(id == null)
         {
             return;
         }
 
-        var user = await _userManager.FindByIdAsync(id);
+        var user = await UserManager.FindByIdAsync(id);
 
         if (user == null)
         {
-            _notificationService.Notify(NotificationSeverity.Error, "Failed to Switch Church Context");
+            NotificationService.Notify(NotificationSeverity.Error, "Failed to Switch Church Context");
 
             return;
         }
 
-        var claims = await _userManager.GetClaimsAsync(user);
+        var claims = await UserManager.GetClaimsAsync(user);
 
         bool replaceNameResult = await ReplaceApplicationTenenatId(claims, newId, user);
         bool replaceIdResult = await ReplaceApplicationTenenatName(claims, newId, user);
 
         if(!replaceIdResult || !replaceIdResult)
         {
-            _notificationService.Notify(NotificationSeverity.Error, "Failed to Switch Church Context");
+            NotificationService.Notify(NotificationSeverity.Error, "Failed to Switch Church Context");
 
             return;
         }
 
-        var updateResult = await _userManager.UpdateAsync(user);
+        var updateResult = await UserManager.UpdateAsync(user);
 
         if (!updateResult.Succeeded)
         {
-            _notificationService.Notify(NotificationSeverity.Error, "Failed to Switch Church Context");
+            NotificationService.Notify(NotificationSeverity.Error, "Failed to Switch Church Context");
 
             return;
         }
 
-        _navigationManager.NavigateTo($"/account/relogin?returnUrl=/management/configuration/churches", true);
+        NavigationManager.NavigateTo($"/account/relogin?returnUrl=/management/configuration/churches", true);
 
     }
 
@@ -160,7 +147,7 @@
 
         var newActiveTenantIdClaim = new Claim("ActiveTenantId", newTenantId.ToString());
 
-        var replaceIdResult = await _userManager.ReplaceClaimAsync(user, oldActiveTenantIdClaim, newActiveTenantIdClaim);
+        var replaceIdResult = await UserManager.ReplaceClaimAsync(user, oldActiveTenantIdClaim, newActiveTenantIdClaim);
 
         if (!replaceIdResult.Succeeded)
         {
@@ -183,7 +170,7 @@
 
         var newActiveTenantNameClaim = new Claim("ActiveTenantName", applicationTenantName);
 
-        var replaceNameResult = await _userManager.ReplaceClaimAsync(user, oldActiveTenantNameClaim, newActiveTenantNameClaim);
+        var replaceNameResult = await UserManager.ReplaceClaimAsync(user, oldActiveTenantNameClaim, newActiveTenantNameClaim);
 
         if (!replaceNameResult.Succeeded)
         {
