--- a/src/Churchee.Module.Site/Areas/Site/Pages/PageTypes/Edit.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/PageTypes/Edit.razor
@@ -35,23 +35,29 @@
         {
             <RadzenCard>
 
-                    <RadzenFormField Text="Name">
-                        <RadzenTextBox @bind-Value="@item.Name" />
-                    </RadzenFormField>
+                    <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" Wrap="FlexWrap.Wrap" JustifyContent="JustifyContent.Stretch">
 
-                    <RadzenFormField Text="Order">
-                        <RadzenNumeric @bind-Value="@item.Order" />
-                    </RadzenFormField>
+                        <RadzenFormField Text="Name">
+                            <RadzenTextBox @bind-Value="@item.Name" />
+                        </RadzenFormField>
+
+                        <RadzenFormField Text="Order">
+                            <RadzenNumeric @bind-Value="@item.Order" />
+                        </RadzenFormField>
 
 
-                    <RadzenFormField Text="Required">
-                        <RadzenCheckBox @bind-Value=@item.Required Name="Required" Style="margin-left:5px;" />
-                        <RadzenLabel Text="Required" Component="CheckBox1" Style="margin: 0 18px; vertical-align: middle; padding:0.5rem" />
-                    </RadzenFormField>
+                        <RadzenFormField Text="Required">
+                            <RadzenCheckBox @bind-Value=@item.Required Name="Required" Style="margin-left:5px;" />
+                            <RadzenLabel Text="Required" Component="CheckBox1" Style="margin: 0 18px; vertical-align: middle; padding:0.5rem" />
+                        </RadzenFormField>
 
-                    <RadzenFormField Text="Type">
-                        <RadzenDropDown Data=EditorTypes @bind-Value=@item.Type.Value TextProperty="Title" ValueProperty="Value" />
-                    </RadzenFormField>
+                        <RadzenFormField Text="Type">
+                            <RadzenDropDown Data=EditorTypes @bind-Value=@item.Type.Value TextProperty="Title" ValueProperty="Value" />
+                        </RadzenFormField>
+
+                        <RadzenButton ButtonStyle="ButtonStyle.Danger" ButtonType="ButtonType.Button" Click="@(() => DeleteContentType(item))" Icon="delete" class="rz-mt-1" />
+
+                    </RadzenStack>
 
 
             </RadzenCard>
@@ -80,6 +86,11 @@
     private void AddContentType()
     {
         Content.Add(new PageTypeContentItemModel());
+    }
+
+    private void DeleteContentType(PageTypeContentItemModel item)
+    {
+        Content.Remove(item);
     }
 
     protected override async Task OnInitializedAsync()
