--- a/src/Churchee.Module.Identity/wwwroot/sass/login.scss
+++ b/src/Churchee.Module.Identity/wwwroot/sass/login.scss
@@ -38,10 +38,7 @@ h1 {
         margin: 1rem 0;
         color: inherit;
         border: 0;
-        border-top-width: 0px;
-        border-top-style: none;
-        border-top-color: currentcolor;
-        border-top: 1px solid;
+        border-top: 1px solid currentcolor;
         opacity: .25;
     }
 
