--- a/src/Churchee.Module.Events/Areas/Website/Pages/Events/Index.razor
+++ b/src/Churchee.Module.Events/Areas/Website/Pages/Events/Index.razor
@@ -54,24 +54,12 @@
     {
         isLoading = true;
 
-        string orderBy = "CreatedDate";
-        string orderByDirection = "desc";
-
-        if (!string.IsNullOrEmpty(args.OrderBy))
-        {
-            var split = args.OrderBy.Split(" ");
-            orderBy = split[0];
-            orderByDirection = split[1];
-
-        }
-
         var result = await Mediator.Send(new GetListingQuery(
-                    skip: args?.Skip ?? 0,
-                    take: args?.Top ?? 20,
-                    searchText: args?.Filter ?? string.Empty,
-                    orderBy: string.IsNullOrEmpty(args?.OrderBy) ? "CreatedDate desc" : args?.OrderBy), default);
+                    skip: args.Skip ?? 0,
+                    take: args.Top ?? 20,
+                    searchText: args.Filter ?? string.Empty,
+                    orderBy: string.IsNullOrEmpty(args.OrderBy) ? "CreatedDate desc" : args.OrderBy), default);
 
-        // Perform paging via Skip and Take.
         listingData = result.Data;
 
         isLoading = false;
