--- a/src/Churchee.Module.Events/Components/EventDatesManager.razor
+++ b/src/Churchee.Module.Events/Components/EventDatesManager.razor
@@ -56,7 +56,7 @@
         base.OnInitialized();
     }
 
-    public async Task AddEntry()
+    public void AddEntry()
     {
         Dates.Add(new EventDateModel(Start, End));
 
@@ -66,7 +66,7 @@
         StateHasChanged();
     }
 
-    public async Task RemoveEntry(EventDateModel item)
+    public void RemoveEntry(EventDateModel item)
     {
         Dates.Remove(item);
 
