--- a/src/Churchee.Module.UI/Components/TextWithSlug.razor
+++ b/src/Churchee.Module.UI/Components/TextWithSlug.razor
@@ -36,6 +36,11 @@
         get
         {
 
+            if (string.IsNullOrEmpty(Value))
+            {
+                return string.Empty;
+            }
+
             if(Value == "Home")
             {
                 return "/";
