--- a/src/Churchee.Module.UI/Components/TextWithSlug.razor
+++ b/src/Churchee.Module.UI/Components/TextWithSlug.razor
@@ -9,7 +9,7 @@
 
 <RadzenFormField Text=@PropertyInfo.Name.ToSentence()>
     <ChildContent>
-        <RadzenTextBox Value="@Value" Change=@((value) => OnChange(value)) />
+        <RadzenTextBox Name="@Name" Value="@Value" Change=@((value) => OnChange(value)) />
     </ChildContent>
     <Helper>
         <small class="rz-color-base-600">slug: @Slug</small>
@@ -31,6 +31,8 @@
     [Parameter]
     public string Value { get; set; }
 
+    [Parameter]
+    public string Name { get; set; }
 
     public string Slug { 
         get
